[package]
name = "dyncall-sys"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0/MIT"
readme = "README.md"
description = "Raw C bindings for the dyncall libraries"
repository = "https://github.com/MechSlayer/dyncall-sys"
keywords = ["ffi", "c", "dyncall", "dyncallback", "dyn", "call"]
categories = ["ffi", "c"]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["dyncall"]
std = []
dyncall = []
dyncallback = ["dyncall"]
dynload = []

[build-dependencies]
cmake = "0.1"
bindgen = "0.65"
git2 = "0.17"
